--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -500,6 +500,74 @@ img {
   transform: rotate(-30deg);
 }
 
+/*=============== MAP ===============*/
+.map{
+  position: relative;
+}
+
+.map__container{
+  background-color:  hsl(19, 24%, 25%);
+  border-radius: 2rem;
+  padding-block: 2rem;
+  margin-top: 4rem;
+  transition: transform .3s;
+}
+
+.map__container:hover{
+   transform: rotate(1deg);
+}
+
+.map__content{
+  justify-content: center;
+}
+
+.map__web{
+  display: flex;
+  justify-self: center;
+  width: 90%;
+  order: 2;
+  background-color: var(--first-color);
+  padding: .5rem;
+  border-radius: 1rem;
+  margin-bottom: -4rem;
+}
+
+.map__web-item{
+  margin: 0 auto;
+  border-radius: 1rem;
+  width: 98%;
+}
+
+.map__description{
+  order: 1;
+  margin-bottom: -2rem;
+}
+
+.map__description span{
+  font-size: var(--h1-font-size);
+}
+
+.map__description h2{
+  color: #fff;
+}
+
+.map__leaf-1,
+.map__leaf-2{
+  position: absolute;
+  z-index: 1;
+  width: 80px;
+  opacity: .4;
+}
+
+.map__leaf-1{
+  bottom: -6rem;
+  right: -.5rem;
+  transform: rotate(45deg);
+}
+
+.map__leaf-2{
+  top: 6rem;
+}
 
 /*=============== NEWSLETTER ===============*/
 .newsletter__container{
@@ -561,16 +629,179 @@ img {
 }
 
 /*=============== FOOTER ===============*/
+.footer{
+  position: relative;
+  padding-block: 3rem 2rem;
+  overflow: hidden;
+}
 
+.footer__conatiner{
+  row-gap: 3rem;
+}
+
+.footer__logo{
+  display: inline-flex;
+  align-items: center;
+  column-gap: .5rem;
+  color: var(--title-color);
+  font-family: var(--title-font);
+  font-size: var(--h3-font-size);
+  font-weight: var(--font-semi-bold);
+  margin-bottom: 1rem;
+  transition: color .3s;
+}
+
+.footer__logo img{
+  width: 25px;
+}
+
+.footer__logo:hover{
+  color: var(--first-color);
+}
+
+.footer__description,
+.footer__link,
+.footer__information{
+  font-size: var(--small-font-size);
+}
+
+.footer__content,
+.footer__link{
+  display: grid;
+}
+
+.footer__content{
+  grid-template-columns: repeat(2, max-content);
+  gap: 2.5rem;
+}
+
+.footer__title{
+  font-size: var(--h3-font-size);
+  margin-bottom: 1.5rem;
+}
+
+.footer__links{
+  row-gap: .5rem;
+}
+
+.footer__link{
+  color: var(--text-color);
+  transition: color .3s;
+}
+
+.footer__link:hover{
+  color: var(--first-color);
+}
+
+.footer__social{
+  display: flex;
+  column-gap: 1.25rem;
+}
+
+.footer__social-link{
+  color: var(--first-color);
+  font-size: 1.25rem;
+  transition: color .3s, transform .3s;
+}
+
+.footer__social-link:hover{
+  color: var(--first-color-alt);
+  transform: translateY(-2px);
+}
+
+.footer__onion,
+.footer__spinach{
+  width: 30px;
+  position: absolute;
+}
+
+.footer__onion{
+  top: 7rem;
+  right: 5rem;
+  transform: rotate(-45deg);
+}
+
+.footer__spinach{
+  bottom: 8rem;
+  left: 3rem;
+  transform: rotate(30deg);
+}
+
+.footer__leaf{
+  width: 100px;
+  opacity: .2;
+  position: absolute;
+  bottom: 6rem;
+  right: -2rem;
+  transform: rotate(-15deg);
+}
+
+.footer__info,
+.footer__card{
+  display: flex;
+}
+
+.footer__info{
+  margin-top: 6.5rem;
+  flex-direction: column;
+  row-gap: 1.5rem;
+}
+
+.footer__card{
+  column-gap: 1rem;
+  justify-content: center;
+}
+
+.footer__card img{
+  width: 35px;
+}
+
+.footer__copy{
+  text-align: center;
+  font-size: var(--smaller-font-size);
+  color: var(--text-color-light);
+}
 
 /*=============== SCROLL BAR ===============*/
+::-webkit-scrollbar{
+  width: .6rem;
+  border-radius: .5rem;
+  background-color: hsl(19, 8%, 85%);
+}
 
+::-webkit-scrollbar-thumb{
+  border-radius: .5rem;
+  background-color: hsl(19, 8%, 65%);
+}
+
+::-webkit-scrollbar-thumb:hover{
+  background-color: hsl(19, 8%, 55%);
+}
 
 /*=============== SCROLL UP ===============*/
+.scrollup{
+  position: fixed;
+  right: 1rem;
+  bottom: -50%;
+  background-color: var(--container-color);
+  box-shadow: 0 4px 12px hsla(19, 64%, 24%, .1);
+  display: inline-flex;
+  padding: .35rem;
+  border-radius: .25rem;
+  font-size: 1.1rem;
+  color: var(--first-color);
+  z-index: var(--z-tooltip);
+  transition: bottom .3s, transform .3s, background .4s;
+}
 
+.scrollup:hover{
+  transform: translateY(-.25rem);
+}
 
 /* Show Scroll Up*/
-
+.show-scroll{
+  bottom: 3rem;
+}
 
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
